[package]
name = "backuper"
version = "0.1.0"
edition = "2024"

[lib]
# name = "backuper"

[[bin]]
name = "backuper"
path = "src/main.rs"

[dependencies]
chrono = "0.4.42"
clokwerk = "0.4.0"
fs_extra = "1.3.0"
lazy_static = "1.5.0"
serde = { version = "1.0.226", features = ["derive"] }
toml = "^0.9.7"
